# ENet-CSharp

./: .gitignore  BUILD-FOR-SWITCH.txt  CHANGES.md  CMakeLists.txt  COMMON-MISTAKES.md  DOCUMENTATION.md  Directory.Build.props  ENet-CSharp.nuspec  ENet-CSharp.sln  LICENSE  QUICKSTART-EXAMPLES.md  README.md  bump.txt
.github/workflows/: Build-Master.yaml  Build-for-Linux64-UbuntuLatest.yaml  Build-for-iOS-latestSDK.yaml  Linux64bitBuilds.yml  MasterBuild.yaml  build_linux64.yml
AutoBuild/: apple-ios.command  githubAutoBuild.cmd  githubAutoBuild.command  ios-autobuild.command  linux-androidndk.sh
Build-iOS/: Build-iOS.command  CMakeLists.txt
BuildScripts/: apple-mac.command  ms-windows.cmd
MSBuild/CMake/: CMake.Build.targets  CMake.Copy.targets  CMake.csproj
MSBuild/Common/: Banner.txt  BannerTask.cs  BannerTask.targets
MSBuild/ENetCSharp/: ENetCSharp.csproj
MSBuild/ENetTests/: ENetTests.csproj  UnitTests.cs
MSBuild/ENetTests/Properties/: launchSettings.json
MobileToolchains/: apple-ios.cmake
Source/Managed/: ENet-CSharp.csproj  ENet.cs
Source/Native/: CMakeLists.txt  enet.c  enet.h  enet_log.h  enet_malloc.h
Source/Native/custom/: enet_apple_logging.h  enet_iosFixes.h  enet_logging.h
Source/Native/jni/: Application.mk
